# invasion

./: Cargo.toml  readme.md
.github/workflows/: rust.yml
assets/sprites/: blocks.aseprite  char_idle.aseprite  char_run.aseprite
assets/stages/: 1.stage.json  2.stage.json  a.stage.json  b.stage.json
assets/textures/chars/: char_atlas.aseprite
docs/: index.html  invasion.d.ts  invasion.js  invasion_bg.wasm.d.ts
docs/assets/stages/: 1.stage.json
src/: collision.rs  config.rs  effects.rs  game.rs  main.rs  random.rs
src/SplashPlugin/: mod.rs
src/enter_stage/: mod.rs  systems.rs
src/game/: collision.rs  components.rs  data.rs  effects.rs  mod.rs  prelude.rs  systems.rs
src/main_menu/: components.rs  mod.rs  systems.rs
